[package]
name = "analysis-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
macros = { package = "macros", path = "macros" }
clap = { version = "4.3.11", features = ["derive"] }
plotters = "0.3.5"
zingo-testutils = { path = "zingolib/zingo-testutils" }
zingolib = { path = "zingolib/zingolib" }
zingoconfig = { path = "zingolib/zingoconfig" }
tokio =  { version = "1.24.2", features = ["full"] }
json = "0.12.4"
serde = "1.0.190"
serde_json = "1.0.105"

[profile.test]
opt-level = 3
debug = false

